welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:5: error: type mismatch;
 found   : Unit
 required: Boolean
		bool = true;
                     ^in1020:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(10 <= a && a>=20 ^ 10 <= b && b>=20)
        ^