welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
var bool = false;
	if(10 <= a && a>=20 ^ 10 <= b && b>=20)
	{
		bool = true;
	}

}
